--- a/src/components/Pages/css/About.scss
+++ b/src/components/Pages/css/About.scss
@@ -17,3 +17,19 @@
     }
   }
 }
+.Developer-head {
+  text-transform: uppercase;
+  background-color: #333;
+  color: #fff;
+  font-size: 1.5rem;
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+
+  span {
+    display: flex;
+    align-items: center;
+  }
+}
