Added style to the forms

--- a/src/components/Pages/css/Login.scss
+++ b/src/components/Pages/css/Login.scss
@@ -59,6 +59,13 @@
         padding: 15px 20px;
         border-radius: 5px;
       }
+      input{
+        padding:10px;
+        border-radius:10px;
+      }
+      input:focus {
+        background-color: lightpink;
+      }
       .btn:hover{
         opacity: 0.9;
         cursor: pointer;
